# dynamic-document-generator

./: .gitignore  LICENSE  README.md  Research.md  main.py  pyproject.toml
agents/: commercial_standards_agent.py  general_standards_agent.py  land_use_permits_agent.py  postprocess_agent.py  zoning_agent.py
api/: endpoints.py
core/: orchestrator.py  state.py  template_loader.py
static/: dummy_data.json  template.html
tests/: test_agents.py
